--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,114 @@
 .App {
+  width: 100vw;
+  height: 100vh;
+  background-image: url('C:\Users\Asus\Desktop\background2.jpg');
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
-
+.bubbles{
+  position: absolute;
+  bottom: -100px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.bubbles span{
+  height: 60px;
+  width: 60px;
+  background: rgba(255,255,255,0.1);
+  box-shadow: 0 20px 50px rgba(0,0,0,0.15);
+  backdrop-filter: blur(5px);
+  animation: move 10s linear infinite;
+  position: relative;
+  overflow: hidden;
+}
+.bubbles span.one{
+  animation-delay: 2.2s;
+  transform: scale(2.15);
+}
+.bubbles span.two {
+  animation-delay: 3.5s;
+  transform: scale(1.55);
+}
+.bubbles span.three{
+  animation-delay: 0.2s;
+  transform: scale(0.35);
+}
+.bubbles span.four{
+  animation-delay: 6s;
+  transform: scale(2.15);
+}
+.bubbles span.five{
+  animation-delay: s;
+  transform: scale(0.5);
+}
+.bubbles span.six{
+  animation-delay: 4s;
+  transform: scale(2.5);
+}
+.bubbles span.seven{
+  animation-delay: 3s;
+  transform: scale(1.5);
+}
+.bubbles span:before{
+  content:'';
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 60px;
+  width: 40%;
+  transform: skew(45deg) translateX(150px);
+  background: rgba(255,255,255,0.15);
+  animation: mirror 3s linear infinite;
+}
+.calculator{
+  width: 360px;
+  background  : rgba(255,255,255,0.1);
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.15);
+  backdrop-filter: blur(5px);
+  border-top: 1px solid rgba(255,255,255,0.5);
+  border-left: 1px solid rgba(255,255,255,0.5);
+}
+.calculator input[type='text']{
+  width : 100%;
+  height : 100px;
+  margin: 0 3px;
+  outline: none;
+  background: transparent;
+  border: none;
+  text-align: right;
+  font-size: 30px;
+  padding-right: 10px;
+  color: #fff;
+}
+.calculator input[type="button"]{
+  height: 65px;
+  color: #fff;
+  width: 85px;
+  background: transparent;
+  margin-top: 15px;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  border-radius: 12px;
+  cursor: pointer;
+  transition: all 0.3 ease;
+}
+.calculator input[type='button']:hover{
+  background: rgba(255,255,255,0.15);
+}
+@keyframes move {
+  100%{
+    transform: translateY(-90vh);
+  }
+}
+@keyframes mirror {
+  100%{
+    transform: translateX(-450px);
+  }
+}
