--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   width: 100vw;
   height: 100vh;
-  background-image: url('C:\Users\Asus\Desktop\background2.jpg');
+  background-image: url('../resources/background.jpg');
   background-size: cover;
   display: flex;
   justify-content: center;
